# EchoSight

./: README.md  model_server.py  pyproject.toml  vad_utils.py
assets/ref_audios/: README.md
