[project]
name = "root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "addict>=2.4.0",
    "aiofiles>=24.1.0",
    "decord>=0.6.0",
    "editdistance>=0.8.1",
    "einops>=0.8.1",
    "fairscale>=0.4.13",
    "fastapi>=0.116.1",
    "ffmpeg>=1.4",
    "gradio>=5.43.1",
    "gradio-client>=1.12.1",
    "jsonlines>=4.0.0",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.5",
    "modelscope-studio>=1.4.5",
    "more-itertools>=10.7.0",
    "moviepy>=2.2.1",
    "nltk>=3.9.1",
    "numpy==2.2",
    "onnxruntime>=1.22.1",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "pydantic>=2.11.7",
    "sacrebleu>=2.5.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "shortuuid>=1.0.13",
    "socksio>=1.0.0",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers==4.44.2",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
    "vector-quantize-pytorch>=1.23.1",
    "vocos>=0.1.0",
    "xformers>=0.0.32.post2",
]
